# compassRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  DEMO_SCRIPT.md  README.md  docker-compose.yml  evaluation_report.md  evaluation_results.json  pyproject.toml  scratch_query_test.py  scratch_resume_test.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/evaluation/: page.tsx
frontend/app/review/: page.tsx
frontend/components/chat/: citation-sheet.tsx  query-input.tsx  response-card.tsx  thinking-status.tsx
frontend/components/evaluation/: benchmark-charts.tsx  stat-cards.tsx
frontend/components/layout/: header.tsx  sidebar.tsx
frontend/components/review/: ocr-review-card.tsx
frontend/lib/: api.ts  types.ts  utils.ts
infrastructure/: docker-compose.yml
scratch/: scratch_query_test.py  summarize_results.py  test_retrieval.py
scripts/: check_tenant_chunks.py  debug_eval.py  run_benchmark.py  run_demo_stack.py  run_evaluation.py  test_health_checks.py  test_hidevs_query.py  test_local_services.py
services/: evaluation_results.json
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: __init__.py  main.py
services/api-gateway/app/api/: health.py  routes.py
services/api-gateway/app/db/: __init__.py  models.py  session.py
services/api-gateway/app/services/: __init__.py  auth.py  orchestrator.py  rbac.py
services/correction/: Dockerfile  README.md  pyproject.toml
services/correction/app/: __init__.py  main.py
services/correction/app/api/: health.py  routes.py
services/correction/app/services/: __init__.py  clarification.py  contradiction.py  graph.py  groundedness.py  reformulator.py  state.py
services/evaluation/: Dockerfile  README.md  pyproject.toml
services/evaluation/app/: __init__.py  main.py
services/evaluation/app/api/: __init__.py  routes.py
services/evaluation/app/data/: __init__.py  corpus_generator.py  golden_dataset.yaml
services/evaluation/app/models/: __init__.py  eval.py
services/evaluation/app/services/: __init__.py  baseline_pipeline.py  metrics_evaluator.py  report_generator.py
services/evaluation/reports/: evaluation_comparison_report.json  evaluation_comparison_report.md
services/generation/: Dockerfile  README.md  pyproject.toml
services/generation/app/: __init__.py  main.py
services/generation/app/api/: health.py  routes.py
services/generation/app/services/: __init__.py  circuit_breaker.py  fallback.py  service.py  synthesis.py
services/ingestion/: Dockerfile  README.md  pyproject.toml
services/ingestion/app/: main.py
services/ingestion/app/api/: health.py  routes.py
services/ingestion/app/db/: __init__.py  models.py  session.py
services/ingestion/app/pipeline/: __init__.py  chunker.py  classifier.py  ocr.py  pii_redaction.py
services/ingestion/app/workers/: __init__.py  celery_app.py  tasks.py
services/retrieval/: Dockerfile  README.md  pyproject.toml
services/retrieval/app/: __init__.py  main.py
services/retrieval/app/api/: health.py  routes.py
services/retrieval/app/db/: __init__.py  models.py  session.py
services/retrieval/app/services/: __init__.py  embedder.py  es_store.py  evaluator.py  hybrid_retriever.py  postgres_store.py  qdrant_store.py  reranker.py  rrf.py
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py  config.py  logging.py  metrics.py  telemetry.py  tenant.py
shared/src/shared/models/: __init__.py  common.py
shared/src/shared/utils/: __init__.py  llm_client.py
tests/: conftest.py  test_api_gateway.py  test_correction_graph.py  test_domain_models.py  test_e2e_demo.py  test_embedding_and_storage.py  test_evaluation.py  test_generate_draft_integration.py  test_generation.py  test_health_and_shared.py  test_hybrid_retrieval.py  test_ingestion_pipeline.py  test_pii_pipeline_enforcement.py  test_pii_redaction.py  test_semantic_chunking.py  test_telemetry.py  test_tenant_resolution.py
tests/fixtures/: __init__.py  make_test_pdfs.py
