[project]
name = "compass-rag-monorepo"
version = "0.1.0"
description = "Compass RAG: Production-grade self-correcting RAG pipeline monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "shared",
    "services/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pillow>=10.2.0",
    "celery>=5.3.6",
    "sqlalchemy>=2.0.28",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "numpy<2.0.0",
    "en-core-web-sm",
    "langchain-text-splitters>=0.2.0",
    "qdrant-client>=1.8.0",
    "elasticsearch>=8.13.0",
    "sentence-transformers>=2.6.0",
    "openai>=1.14.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.black]
line-length = 100
target-version = ['py312']



[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "."
