[project]
name = "compass-rag-shared"
version = "0.1.0"
description = "Shared domain models, configuration, and structured logging for Compass RAG services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "fastapi>=0.110.0",
    "starlette>=0.36.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
