[project]
name = "compass-rag-api-gateway"
version = "0.1.0"
description = "API Gateway for Compass RAG: orchestrating ingestion, retrieval, correction, and generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "celery>=5.3.0",
    "compass-rag-shared",
    "compass-rag-correction",
    "compass-rag-generation",
]

[tool.uv.sources]
compass-rag-shared = { workspace = true }
compass-rag-correction = { workspace = true }
compass-rag-generation = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
