[project]
name = "compass-rag-correction"
version = "0.1.0"
description = "Correction service for Compass RAG: self-correcting evaluation and query refinement"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "compass-rag-shared",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "openai>=1.14.0",
    "sentence-transformers>=2.6.0",
    "asyncpg>=0.29.0",
]

[tool.uv.sources]
compass-rag-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
