[project]
name = "compass-rag-evaluation"
version = "0.1.0"
description = "Evaluation service for Compass RAG: benchmarking self-correcting RAG against baseline across golden datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "pydantic>=2.6.0",
    "compass-rag-shared",
    "compass-rag-retrieval",
    "compass-rag-correction",
    "compass-rag-generation",
]

[tool.uv.sources]
compass-rag-shared = { workspace = true }
compass-rag-retrieval = { workspace = true }
compass-rag-correction = { workspace = true }
compass-rag-generation = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
