[project]
name = "compass-rag-generation"
version = "0.1.0"
description = "Generation service for Compass RAG: LLM response synthesis from grounded context"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "compass-rag-shared",
]

[tool.uv.sources]
compass-rag-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
