[project]
name = "compass-rag-ingestion"
version = "0.1.0"
description = "Ingestion service for Compass RAG: parsing, chunking, and embedding indexing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pillow>=10.2.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "python-multipart>=0.0.9",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "numpy<2.0.0",
    "en-core-web-sm",
    "langchain-text-splitters>=0.2.0",
    "compass-rag-shared",
]

[tool.uv.sources]
compass-rag-shared = { workspace = true }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
