[project]
name = "compass-rag-retrieval"
version = "0.1.0"
description = "Retrieval service for Compass RAG: dense and sparse search over chunks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.8.0",
    "elasticsearch>=8.13.0",
    "sentence-transformers>=2.6.0",
    "openai>=1.14.0",
    "compass-rag-shared",
]

[tool.uv.sources]
compass-rag-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
